--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "gsap": "^3.12.1",
+    "locomotive-scroll": "^5.0.0-beta.8",
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
